--- a/src/Makefile
+++ b/src/Makefile
@@ -31,7 +31,8 @@ endif
 
 BINARIES = $(BIN)/compactlog 
 
-MODULES = types.o
+MODULES = types.o \
+          file_operations.o
 
 all : bindir $(BINARIES)
 devel : bindir $(BINARIES)
@@ -40,15 +41,31 @@ devel : bindir $(BINARIES)
 # Link
 #
 
-$(BIN)/compactlog : Makefile $(MODULES) compactlog.o
-	$(FORTRAN) -o $(BIN)/compactlog $(MODULES) compactlog.o $(FLAGS)
+$(BIN)/compactlog : Makefile $(MODULES) compactlog.o \
+                                        model_index.o \
+                                        progress_bar.o
+	$(FORTRAN) -o $(BIN)/compactlog $(MODULES) \
+                    compactlog.o \
+                    model_index.o \
+                    progress_bar.o \
+                    $(FLAGS)
 
 #
-# Build objects
+# Main program objects
 #
 
 compactlog.o : Makefile compactlog.f90 
 	$(FORTRAN) -c compactlog.f90 $(FLAGS)
+
+#
+# Subroutine and function objects
+#
+
+model_index.o : Makefile model_index.f90 
+	$(FORTRAN) -c model_index.f90 $(FLAGS)
+
+progress_bar.o : Makefile progress_bar.f90 
+	$(FORTRAN) -c progress_bar.f90 $(FLAGS)
 
 #
 # Build modules
@@ -58,6 +75,9 @@ modules : $(MODULES)
 
 types.o : types.f90
 	$(FORTRAN) -c types.f90 $(FLAGS)
+
+file_operations.o : file_operations.f90
+	$(FORTRAN) -c file_operations.f90 $(FLAGS)
 
 #
 #  Binary directory
