Added xcompactlog not tested yet.

--- a/src/Makefile
+++ b/src/Makefile
@@ -30,6 +30,7 @@ endif
 ###################################################################
 
 BINARIES = $(BIN)/compactlog \
+           $(BIN)/xcompactlog \
            $(BIN)/gscore \
            $(BIN)/gcorrelation
 
@@ -45,26 +46,43 @@ devel : bindir $(BINARIES)
 
 $(BIN)/compactlog : Makefile $(MODULES) compactlog.o \
                                         model_index.o \
+                                        sort.o \
                                         progress_bar.o
 	$(FORTRAN) -o $(BIN)/compactlog $(MODULES) \
                     compactlog.o \
                     model_index.o \
+                    sort.o \
+                    progress_bar.o \
+                    $(FLAGS)
+
+$(BIN)/xcompactlog : Makefile $(MODULES) xcompactlog.o \
+                                        model_index.o \
+                                        sort.o \
+                                        progress_bar.o
+	$(FORTRAN) -o $(BIN)/xcompactlog $(MODULES) \
+                    xcompactlog.o \
+                    model_index.o \
+                    sort.o \
                     progress_bar.o \
                     $(FLAGS)
 
 $(BIN)/gscore : Makefile $(MODULES) gscore.o \
+                                    sort.o \
                                     progress_bar.o
 	$(FORTRAN) -o $(BIN)/gscore $(MODULES) \
                     gscore.o \
+                    sort.o \
                     progress_bar.o \
                     $(FLAGS)
 
 $(BIN)/gcorrelation : Makefile $(MODULES) gcorrelation.o \
                                         model_index.o \
+                                        sort.o \
                                         progress_bar.o
 	$(FORTRAN) -o $(BIN)/gcorrelation $(MODULES) \
                     gcorrelation.o \
                     model_index.o \
+                    sort.o \
                     progress_bar.o \
                     $(FLAGS)
 
@@ -75,6 +93,9 @@ $(BIN)/gcorrelation : Makefile $(MODULES) gcorrelation.o \
 
 compactlog.o : Makefile compactlog.f90 
 	$(FORTRAN) -c compactlog.f90 $(FLAGS)
+
+xcompactlog.o : Makefile xcompactlog.f90 
+	$(FORTRAN) -c xcompactlog.f90 $(FLAGS)
 
 gscore.o : Makefile gscore.f90 
 	$(FORTRAN) -c gscore.f90 $(FLAGS)
@@ -91,6 +112,9 @@ model_index.o : Makefile model_index.f90
 
 progress_bar.o : Makefile progress_bar.f90 
 	$(FORTRAN) -c progress_bar.f90 $(FLAGS)
+
+sort.o : Makefile sort.f90 
+	$(FORTRAN) -c sort.f90 $(FLAGS)
 
 #
 # Build modules
