gscoreq in development

--- a/src/Makefile
+++ b/src/Makefile
@@ -32,6 +32,7 @@ endif
 BINARIES = $(BIN)/compactlog \
            $(BIN)/xcompactlog \
            $(BIN)/gscore \
+           $(BIN)/gscoreq \
            $(BIN)/xgscore \
            $(BIN)/gcorrelation \
            $(BIN)/xgcorrelation \
@@ -87,6 +88,17 @@ $(BIN)/gscore : Makefile $(MODULES) gscore.o \
                     gscore.o \
                     sort.o \
                     read_compactlog.o \
+                    title.o \
+                    progress_bar.o \
+                    $(FLAGS)
+
+$(BIN)/gscoreq : Makefile $(MODULES) gscoreq.o \
+                                    sort.o \
+                                    title.o \
+                                    progress_bar.o
+	$(FORTRAN) -o $(BIN)/gscoreq $(MODULES) \
+                    gscoreq.o \
+                    sort.o \
                     title.o \
                     progress_bar.o \
                     $(FLAGS)
@@ -159,6 +171,9 @@ xcompactlog.o : Makefile xcompactlog.f90
 
 gscore.o : Makefile gscore.f90 
 	$(FORTRAN) -c gscore.f90 $(FLAGS)
+
+gscoreq.o : Makefile gscoreq.f90 
+	$(FORTRAN) -c gscoreq.f90 $(FLAGS)
 
 xgscore.o : Makefile xgscore.f90 
 	$(FORTRAN) -c xgscore.f90 $(FLAGS)
